--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">RecipeSharing</string>
+    <string name="app_name">Share your recipes</string>
+    <string name="details_name">Recipe details</string>
     <string name="no_recipes_found">Could not load, please check connection and try again</string>
     <string name="recipe_image_accessibility">Recipe Image</string>
     <string name="servings">Serves</string>
