--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="recipe_image_accessibility">Recipe Image</string>
     <string name="servings">Serves</string>
     <string name="serves">Serves</string>
+    <string name="open_recipe_accessibility">Open recipe</string>
 </resources>
