--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="servings">Serves</string>
     <string name="serves">Serves</string>
     <string name="open_recipe_accessibility">Open recipe</string>
+    <string name="ingredients">Ingredients</string>
 </resources>
