create details view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="open_recipe_accessibility">Open recipe</string>
     <string name="ingredients">Ingredients</string>
     <string name="step_details_title">Step details</string>
+    <string name="button_next_step_accessibility">Button next step</string>
+    <string name="next_step">Next step</string>
 </resources>
