--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="next_step">Next step</string>
     <string name="recipe_thumbnail_image_accessibility">Recipe thumbnail image</string>
     <string name="generic_recipe_image_accessibility">Generic recipe image</string>
+    <string name="no_network_connection_detected">No network connection detected</string>
 </resources>
